--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "nuxt": "^3.16.2",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "agora-rtm-sdk": "^1.5.0"
   }
 }
